<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView android:id="@+id/tvHeader" style="@style/Task4.Title" android:text="@string/t4_header" />
        <EditText android:id="@+id/etName" style="@style/Task4.Field" android:hint="@string/t4_hint_name" android:inputType="text" android:importantForAutofill="no" />
        <Button android:id="@+id/btnGreet" style="@style/Task4.Button" android:text="@string/t4_greet" />
        <TextView android:id="@+id/tvResult" style="@style/Task4.Result" />
        <Button android:id="@+id/btnChangeHeader" style="@style/Task4.Button" android:text="@string/t4_change_header" />
        <Button android:id="@+id/btnHideResult" style="@style/Task4.Button" android:text="@string/t4_hide_result" />
        <Button android:id="@+id/btnCount" style="@style/Task4.Button" android:text="@string/t4_count" />
        <TextView android:id="@+id/tvCount" style="@style/Task4.Big" android:text="@string/zero" />
    </LinearLayout>
</ScrollView>
