<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" android:background="@color/brand_gray">

        <ImageView android:id="@+id/ivIcon" android:layout_width="96dp" android:layout_height="96dp" android:layout_gravity="center_horizontal" android:src="@drawable/ic_android" android:contentDescription="@string/t5_icon_description" />
        <TextView style="@style/Task4.Title" android:text="@string/t5_header" />
        <EditText android:id="@+id/etName" style="@style/Task4.Field" android:hint="@string/t5_hint_name" android:inputType="text" android:importantForAutofill="no" />
        <Button android:id="@+id/btnWelcome" style="@style/Task4.Button" android:text="@string/t5_welcome" android:backgroundTint="@color/brand_blue"/>
        <Button android:id="@+id/btnReset" style="@style/Task4.Button" android:text="@string/t5_reset" android:backgroundTint="@color/brand_green"/>
        <TextView android:id="@+id/tvWelcome" style="@style/Task4.Result" />
        <TextView android:id="@+id/tvLanguage" style="@style/Task4.Result" />
    </LinearLayout>
</ScrollView>
