<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText android:id="@+id/etName" style="@style/Task4.Field" android:hint="@string/pr3_hint_name" android:inputType="text" android:importantForAutofill="no" />
        <EditText android:id="@+id/etGroup" style="@style/Task4.Field" android:hint="@string/pr3_hint_group" android:inputType="text" android:importantForAutofill="no" />
        <EditText android:id="@+id/etSkill" style="@style/Task4.Field" android:hint="@string/pr3_hint_skill" android:inputType="text" android:importantForAutofill="no" />
        <Button android:id="@+id/btnGenerateCard" style="@style/Task4.Button" android:text="@string/pr3_generate" />
    </LinearLayout>
</ScrollView>
