<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <RadioGroup
            android:id="@+id/rgLength"
            style="@style/Task4.Field"
            android:checkedButton="@id/rb4"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/rb4" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/p17_four" />
            <RadioButton android:id="@+id/rb6" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginStart="16dp"
                android:text="@string/p17_six" />
        </RadioGroup>
        <Button android:id="@+id/btnGenerate" style="@style/Task4.Button" android:text="@string/p17_generate" />
        <TextView android:id="@+id/tvPin" style="@style/Task4.Big" android:text="@string/p02_none" android:letterSpacing="0.2"/>
    </LinearLayout>
</ScrollView>
