<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <Button android:id="@+id/btnTerm0" style="@style/Task4.Button" android:text="@string/p29_term0" />
        <Button android:id="@+id/btnTerm1" style="@style/Task4.Button" android:text="@string/p29_term1" />
        <Button android:id="@+id/btnTerm2" style="@style/Task4.Button" android:text="@string/p29_term2" />
    </LinearLayout>
</ScrollView>
