<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView style="@style/Task4.Title" android:text="@string/p03_question" />
        <EditText android:id="@+id/etAnswer" style="@style/Task4.Field" android:hint="@string/p03_hint" android:inputType="text" android:importantForAutofill="no" />
        <Button android:id="@+id/btnCheck" style="@style/Task4.Button" android:text="@string/check" />
        <TextView android:id="@+id/tvVerdict" style="@style/Task4.Result" />
    </LinearLayout>
</ScrollView>
