<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText android:id="@+id/etFrom" style="@style/Task4.Field" android:hint="@string/p27_hint_from" android:inputType="text" android:importantForAutofill="no" />
        <EditText android:id="@+id/etTo" style="@style/Task4.Field" android:hint="@string/p27_hint_to" android:inputType="text" android:importantForAutofill="no" />
        <Button android:id="@+id/btnIssue" style="@style/Task4.Button" android:text="@string/p27_issue" />
    </LinearLayout>
</ScrollView>
