<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText android:id="@+id/etCelsius" style="@style/Task4.Field" android:hint="@string/p13_hint" android:inputType="numberDecimal|numberSigned" android:importantForAutofill="no" />
        <Button android:id="@+id/btnToF" style="@style/Task4.Button" android:text="@string/p13_to_f" />
        <Button android:id="@+id/btnToK" style="@style/Task4.Button" android:text="@string/p13_to_k" />
        <TextView android:id="@+id/tvResult" style="@style/Task4.Result" />
    </LinearLayout>
</ScrollView>
